--- a/main.html
+++ b/main.html
@@ -8,6 +8,49 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h2>Job Application Form</h2>
+		<form method="post">
+			<label for="name">Name: *</label>
+			<input type="text" id="name" required><br><br>
+			
+			
+			<label for="email">Email: *</label>
+			<input type="email" id="email" required><br><br>
+
+			
+			<label>Gender: *</label>
+			<input type="radio" id="male" name="gender" value="male" required>
+			<label for="male">Male</label>
+			<input type="radio" id="female" name="gender" value="female" required>
+			<label for="male">Female</label><br><br>
+
+			
+			<label for="laptop">Laptop Brands: </label>
+			<select id="laptop" name="laptop">
+				<option value="" disabled selected>Select a brand</option>
+			      <option value="apple">Apple</option>
+			      <option value="asus">Asus</option>
+				  <option value="hp">HP</option>
+		    </select><br><br>
+
+
+			<label for="age">Age: *</label>
+			<input type="number" id="age" required><br><br>
+
+			<label for="dob">Date of Birth: *</label>
+			<input type="date" id="dob" required><br><br>
+
+			
+			<label for="password">Password: *</label>
+			<input type="password" id="password" required><br><br>
+
+			<label for="portfolio">Portfolio URL: </label>
+			<input type="url" id="portfolio"><br><br>
+
+			<button id="submit">Submit</button>
+		</form>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
