--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 			<input type="radio" id="male" name="gender" value="male" required>
 			<label for="male">Male</label>
 			<input type="radio" id="female" name="gender" value="female" required>
-			<label for="male">Female</label><br><br>
+			<label for="female">Female</label><br><br>
 
 			
 			<label for="laptop">Laptop Brands: </label>
@@ -48,7 +48,7 @@
 			<label for="portfolio">Portfolio URL: </label>
 			<input type="url" id="portfolio"><br><br>
 
-			<button id="submit">Submit</button>
+			<button type="submit" id="submit">Submit</button>
 		</form>
 	</div>
     <script type="text/javascript" src="./script.js">
